--- a/_config.yml
+++ b/_config.yml
@@ -104,9 +104,9 @@ navbar-col: "#9085c5"
 navbar-text-col: "#ffffff"
 navbar-border-col: "#DDDDDD"
 page-col: "#f7f1fc"
-text-col: "#FFFFFF"
+text-col: "#bfb8f9"
 link-col: "#bdbef9"
-hover-col: "#bfb8f9"
+hover-col: "#FFFFFF"
 footer-col: "#aeaaef"
 footer-text-col: "#c5b6fb"
 footer-link-col: "#e6e1fc"
