--- a/_config.yml
+++ b/_config.yml
@@ -104,8 +104,8 @@ navbar-col: "#9085c5"
 navbar-text-col: "#ffffff"
 navbar-border-col: "#DDDDDD"
 page-col: "#f7f1fc"
-text-col: "#bfb8f9"
-link-col: "#bdbef9"
+text-col: "#BFB8F9"
+link-col: "#aeaaef"
 hover-col: "#FFFFFF"
 footer-col: "#aeaaef"
 footer-text-col: "#c5b6fb"
