--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ navbar-border-col: "#DDDDDD"
 page-col: "#f7f1fc"
 text-col: "#BFB8F9"
 link-col: "#aeaaef"
-hover-col: "#FFFFFF"
+hover-col: "#f6f0fb"
 footer-col: "#aeaaef"
 footer-text-col: "#c5b6fb"
 footer-link-col: "#e6e1fc"
