--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,9 @@ navbar-links:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
     - Getting Started: "getstarted" 
-  Author's home: "https://deanattali.com"
+  #Author's home: "https://deanattali.com"
   Table Demo: "table-demo"
+  Code Through: "code-through"
 
 # --- Logo --- #
 
