--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: My Portfolio
+title: My Website
 
 # Your name to show in the footer
 author: Michelle Hsu
@@ -110,7 +110,7 @@ text-col: "#9085c5"
 link-col: "#aeaaef"
 hover-col: "#BFB8F9"
 footer-col: "#aeaaef"
-footer-text-col: "#c5b6fb"
+footer-text-col: "#9085c5"
 footer-link-col: "#e6e1fc"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
