--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ navbar-border-col: "#DDDDDD"
 page-col: "#f7f1fc"
 text-col: "#9085c5"
 link-col: "#aeaaef"
-hover-col: "#BFB8F9"
+hover-col: "#f7f1fc"
 footer-col: "#aeaaef"
 footer-text-col: "#f7f1fc"
 footer-link-col: "#e6e1fc"
