--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ navbar-links:
   #Author's home: "https://deanattali.com"
   Table Demo: "table-demo"
   Code Through: "code-through"
+  HTML version: "PAF-514-Codethrough"
 
 # --- Logo --- #
 
